package com.example.chatsapp;

import javafx.fxml.FXMLLoader;
import javafx.stage.Stage;

public class SceneController {
    private Stage stage;

    protected SceneController(Stage stage) {
        this.stage = stage;
    }

}
