@startuml

package chatsapp {
    class SceneController{
     - stage: Stage
     # Scenecontroller(stage: Stage)
 }
    class Server{
     - seversocket: ServerSocket
     - socket: Socket
     - bReader: BufferedReader
     - bWriter: BufferedWriter
     # Server(serversocket: ServerSocket)
     # sendToClient(message: String): void
     # startReadingFromClient(chatHistory: 
 VBox): void
 }
    class ServerApplication{
     + start(mainStage: Stage): void 
     + {static} main(args: String[]): void
 }
    class ServerChatController{
     - username: Label
     - txtInput: TextField
     - anchorPane: AnchorPane
     - enterButton: Button
     - exitButton: Button
     - scrollBar: ScrollBar
     - chatHistory: VBox
     - sceneController2: SceneController
     - server: Server
     # setSceneController(sceneController: 
 SceneController): void
     + initialize(url: URL, resourceBundle: 
 ResourceBundle): void
     # {static} serverLabel(clientMSG: String, 
 chatHistory: VBox): void 
 
 }
}

package chatsapp_client {
    class Client{
        - socket: Socket
        - bWriter: BufferedWriter
        - bReader: BufferedReader

        # Client(socket: Socket)
        # sendToServer(message: String): void
        # startReadingFromServer(chatHistory: VBox): void
    }
    class ClientApplication{
        + start(stage: Stage): void
        + main {static}(args: String[]): void
    }
    class ClientController{
        - txtInput: TextField
        - anchorPane: AnchorPane
        - scrollBar: ScrollBar
        - chatHistory: VBox
        - client: Client

        + initialize(url: URL, resourceBundle: ResourceBundle): void
        # {static}clientLabel(serverMessage: String, chatHistory: VBox): void
    }
}


ServerApplication --> ServerChatController 
ServerChatController -- Server
ServerChatController --> SceneController

ClientApplication --> ClientController
ClientController -- Client


Client -- Server: request and send info


@enduml
